# gzOS

./: .gdbinit  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  Dockerfile.toolchain  LICENSE  Makefile
kernel/: CMakeLists.txt  Makefile
kernel/gtest/: CMakeLists.txt
kernel/lib/: CMakeLists.txt
kernel/lib/drivers/: CMakeLists.txt
kernel/lib/drivers/ext2/: CMakeLists.txt  ext-shell.c  ext2_fs.cpp  ext2_fs.h
kernel/lib/drivers/i8259A/: i8259A.c
kernel/lib/drivers/pflash/: CMakeLists.txt  pflash_fd.cpp  pflash_fd.h  pflash_fs.cpp  pflash_fs.h
kernel/lib/fs/: CMakeLists.txt
kernel/lib/fs/fat32/: CMakeLists.txt  Fat32FileDescriptor.cpp  Fat32FileDescriptor.h  diskio.cpp  ffconf.h  fs_ops.cpp  fs_ops.h
kernel/lib/fs/proc/: CMakeLists.txt  ProcFilesystemRoot.cpp  ProcFilesystemRoot.h  ProcPidNode.cpp  ProcPidNode.h
kernel/lib/fs/tmpfs/: CMakeLists.txt  fs_ops.cpp  fs_ops.h
kernel/lib/kernel/: CMakeLists.txt  ConsoleFileDescriptor.cpp  ConsoleFileDescriptor.h  ElfLoader.cpp  ElfLoader.h  IdAllocator.cpp  IdAllocator.h  ProcessMemoryMap.cpp  ProcessMemoryMap.h  VirtualFileSystem.cpp  VirtualFileSystem.h  c_api.cpp  cmdline.cpp  cmdline.h  elf.h  process.cpp  process.h  scheduler.cpp  select.cpp  signals.h  syscalls.cpp  thread.cpp  thread.h  workqueue.cpp  workqueue.h
kernel/lib/kernel/elf/: ElfLoader.cpp  ElfLoader.h
kernel/lib/kernel/initrd/: CpioExtractor.cpp  CpioExtractor.h  load_initrd.cpp  load_initrd.h
kernel/lib/kernel/ipc/: Pipe.cpp  Pipe.h  PipeFileDescriptor.cpp  PipeFileDescriptor.h
kernel/lib/kernel/proc/: MultiLevelFeedbackQueuePolicy.cpp  MultiLevelFeedbackQueuePolicy.h  PriorityScheduling.cpp  PriorityScheduling.h  Process.cpp  Process.h  ProcessMemoryMap.cpp  ProcessMemoryMap.h  ProcessProvider.cpp  ProcessProvider.h  Scheduler.cpp  Scheduler.h  SchedulingPolicy.cpp  SchedulingPolicy.h  SchedulingPolicyData.cpp  SchedulingPolicyData.h  SignalProvider.cpp  SignalProvider.h  SimpleRoundRobinSchedulingPolicy.cpp  SimpleRoundRobinSchedulingPolicy.h  SystemTimer.cpp  SystemTimer.h  Thread.cpp  Thread.h  active_scheduling_policy.h  init.cpp  proc.h
kernel/lib/kernel/proccess/: ProcessMemoryMap.cpp  ProcessMemoryMap.h  process.cpp  process.h
kernel/lib/kernel/sched/: scheduler.cpp  scheduler.h  thread.cpp
kernel/lib/kernel/vfs/: AccessControlledFileDescriptor.cpp  AccessControlledFileDescriptor.h  BasicVFSNode.cpp  BasicVFSNode.h  ConsoleFileDescriptor.cpp  ConsoleFileDescriptor.h  DevFileSystem.cpp  DevFileSystem.h  FileDescriptor.cpp  FileDescriptor.h  FileDescriptorCollection.cpp  FileDescriptorCollection.h  FileSystem.h  MountableNode.cpp  MountableNode.h  Path.h  ReaddirFileDescriptor.cpp  ReaddirFileDescriptor.h  TmpfsNode.cpp  TmpfsNode.h  VFSNode.cpp  VFSNode.h  VFSNodeFactory.h  VFSReaddirFileDescriptor.cpp  VFSReaddirFileDescriptor.h  VirtualFileSystem.cpp  VirtualFileSystem.h  vfs_api.cpp  vfs_api.h
kernel/lib/malloc/: malloc.c  malloc.h
kernel/lib/mm/: CMakeLists.txt  physmem.c  physmem.h  pmap.h  vm.h  vm_map.c  vm_map.h  vm_object.c  vm_object.h  vm_pager.c
kernel/lib/network/: CMakeLists.txt  arp.cpp  arp.h  checksum.c  checksum.h  ethernet.cpp  ethernet.h  interface.cpp  interface.h  ip.cpp  ip.h  ip_raw.h  nbuf.c  nbuf.h  route.cpp  route.h  socket.cpp  socket.h  syscalls.cpp  udp.cpp  udp.h  udp_socket.h
kernel/lib/network/arp/: arp.cpp  arp.h
kernel/lib/primitives/: AbstractMutex.cpp  AbstractMutex.h  CMakeLists.txt  Event.cpp  Event.h  EventStream.h  InterruptsMutex.h  LockGuard.h  Mutex.h  SpinlockMutex.cpp  SpinlockMutex.h  Suspendable.cpp  Suspendable.h  SuspendableMutex.cpp  SuspendableMutex.h  Timer.cpp  Timer.h  basic_queue.h  hashmap.c  hashmap.h  hexdump.c  hexdump.h  interrupts_mutex.h  lock_guard.h  log.h  spinlock_mutex.cpp  stringutils.cpp  stringutils.h  time.h
kernel/lib/stubs/: CMakeLists.txt  cppstubs.cpp  cstubs.cpp  malloc.cpp
kernel/lib/syscall/: CMakeLists.txt  syscall.c  syscall.cpp  syscall.h
kernel/platform/: CMakeLists.txt  clock.h  cpu.h  drivers.cpp  drivers.h  interrupts.h  panic.c  process.h  sbrk.cpp  sbrk.h  system_init.c
kernel/platform/malta/: CMakeLists.txt  boot.S  clock.h  context.S  cpu.c  init.c  interrupts.c  intr.S  malta.h  mips.h  physmem.c  pmap.c  process.c  script.ld  syscall.c  tlb_ops.S  toolchain.cmake  uart_cbus.c  uart_cbus.h  vectors.S
kernel/platform/pci/: pci.cpp  pci_commands.h  pci_ids.h
kernel/src/: CMakeLists.txt  main.cpp
kernel/stubs/: cstubs.cpp
kernel/tests/: CMakeLists.txt  main.cpp  malloc_test.cpp  nbuf_test.cpp
lib/kernel/: CMakeLists.txt  ElfLoader.cpp  ElfLoader.h  FileDescriptor.h  FileDescriptorCollection.cpp  FileDescriptorCollection.h  IdAllocator.h  ProcessMemoryMap.cpp  ProcessMemoryMap.h  VirtualFileSystem.h  c_api.cpp  process.cpp  process.h  scheduler.cpp  scheduler.h  syscalls.cpp  thread.cpp  thread.h
lib/mm/: pmap.h  (+9 more)
platform/: CMakeLists.txt  clock.c  clock.h  cpu.h  drivers.h  interrupts.h  kprintf.c  kprintf.h  panic.c  panic.h  pci.cpp  pci.h  pci_ids.c  process.h  sbrk.cpp  sbrk.h  system_init.c
platform/malta/: CMakeLists.txt  cache.c  cacheops.h  clock.c  clock.h  context.S  cpu.S  cpu.c  gt64120.h  init.c  interrupts.c  interrupts.h  intr.S  malta.h  pager.c  pager.h  pci.c  pci.h  pci_registers.h  physmem.c  physmem.h  pm.c  pmap.c  pmap.h  process.c  script.ld  syscall.c  tlb.c  tlb.h  toolchain.cmake  uart_cbus.c  uart_cbus.h  vm.h  vm_map.c  vm_map.h
platform/pci/: pci.cpp  pci.h  pci_drivers.h  pci_ids.c  pci_ids.h
src/: CMakeLists.txt  main.cpp
userland/toolchain/: CMakeLists.txt  add_userland_executable.cmake  ioctl.c  ioctl.h
userland/toolchain/libc/: accept.c  bind.c  brk.c  chdir.c  close.c  connect.c  dump_fds.c  dump_fds.h  dup2.c  endian.h  errno.c  exec.c  exit.c  fork.c  fstat.c  getcwd.c  getpid.c  gettimeofday.c  isatty.c  kill.c  kill.h  listen.c  lseek.c  mkdir.c  mount.c  mount.h  open.c  pause.c  pipe.c  read.c  readdir.c  readdir.h  recv.c  recvfrom.c  select.c  select.h  send.c  sendto.c  sleep.c  socket.c  (+9 more)
userland/toolchain/malta/: script.ld  syscall.c  toolchain.cmake
(+186 files in other folders)
