cmake_minimum_required(VERSION 2.8)

include_directories(${CMAKE_SOURCE_DIR}/../kernel/lib/syscall)

add_library(cstubs OBJECT
        libc/exit.c
        libc/open.c
        libc/errno.c
        libc/close.c
        libc/getpid.c
        libc/isatty.c
        libc/kill.c
        libc/read.c
        libc/write.c
        malta/syscall.c
        libc/lseek.c
        libc/fstat.c
        libc/brk.c
        libc/start.c
        libc/socket.c
        libc/socket.h
        libc/recv.c
        libc/recvfrom.c
        libc/send.c
        libc/sendto.c
        libc/bind.c
        libc/gettimeofday.c
        libc/sleep.c
        libc/endian.h
        libc/mount.c
        libc/mount.h
        libc/connect.c
        libc/readdir.c
        libc/readdir.h
        libc/traceme.c
        libc/traceme.h
        libc/exec.c
        libc/dup2.c
        libc/waitpid.c
        libc/waitpid.h
        libc/mkdir.c
        libc/kill.h
        libc/listen.c
        libc/accept.c
        libc/pause.c
        libc/chdir.c
        libc/getcwd.c
        libc/fork.c
        libc/pipe.c
        libc/select.h
        libc/select.c
        ioctl.c
        ioctl.h
        libc/dump_fds.c
        libc/dump_fds.h)
